# category_contexto

./: .gitignore  pyproject.toml
docs/plans/: 2026-03-08-category-contexto-design.md  2026-03-08-phase1-implementation.md  2026-03-08-product-layer-design.md
src/category_contexto/: blurbs.py  cli.py  config.py  embeddings.py  graph.py  pipeline.py  ranking.py  storage.py  wiki_context.py  wikidata.py
tests/: conftest.py  test_blurbs.py  test_embeddings.py  test_era_edges.py  test_graph.py  test_integration.py  test_pipeline.py  test_ranking.py  test_state_edges.py  test_storage.py  test_wiki_context.py  test_wikidata.py  test_wikidata_edges.py
