[project]
name = "category-contexto"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "numpy>=1.24",
    "scipy>=1.10",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.scripts]
contexto = "category_contexto.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that hit real APIs (deselect with '-m \"not integration\"')",
]

[tool.setuptools.packages.find]
where = ["src"]
